--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -25,4 +25,52 @@
     box-shadow: 0 0 0 100vmax var(--color-fill);
     clip-path: inset(0 -100vmax);
   }
+  .scroller[data-animated='true'] {
+    overflow: hidden;
+    -webkit-mask: linear-gradient(
+      90deg,
+      transparent,
+      purple 20%,
+      purple 80%,
+      transparent
+    );
+    mask: linear-gradient(
+      90deg,
+      transparent,
+      purple 20%,
+      purple 80%,
+      transparent
+    );
+  }
+  .scroller[data-animated='true'] .scroller__inner {
+    width: max-content;
+    flex-wrap: nowrap;
+    animation: scroll var(--_animation-duration, 40s)
+      var(--_animation-direction, forwards) linear infinite;
+  }
+
+  .scroller[data-direction='right'] {
+    --_animation-direction: reverse;
+  }
+
+  .scroller[data-direction='left'] {
+    --_animation-direction: forwards;
+  }
+
+  .scroller[data-speed='fast'] {
+    --_animation-duration: 20s;
+  }
+  .scroller[data-speed='medium'] {
+    --_animation-duration: 40s;
+  }
+
+  .scroller[data-speed='slow'] {
+    --_animation-duration: 60s;
+  }
+
+  @keyframes scroll {
+    to {
+      transform: translate(calc(-50% - 0.5rem));
+    }
+  }
 }
