--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -73,4 +73,11 @@
   body {
     @apply bg-background text-foreground;
   }
+  input,
+  textarea {
+    @apply border-muted focus:ring-primary focus:border-primary text-primary form-input outline-none;
+  }
+  .aspect-square {
+    aspect-ratio: 1/1;
+  }
 }
